Get reachable url before passing it to sam file reader.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/branches/igb_6_7@11661 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd